--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Project 1</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<ul class="labeled-icons">
+									<li><a href="index.html" class="button primary">View Project</a></li>
+								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
