--- a/aboutme.html
+++ b/aboutme.html
@@ -58,7 +58,7 @@
             </section>
             <section id = "four">
                 <ul class="labeled-icons">
-                    <li><a href="AdithyaRaviResume.pdf" class="button" target = "_blank">Resume</a></li>
+                    <li><a href="AdithyaRaviResume.pdf" class="button" target = "_blank">View Resume</a></li>
                 </ul>
             </section>
 
