--- a/index.html
+++ b/index.html
@@ -34,39 +34,54 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>Project 1</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								<ul class="labeled-icons">
-									<li><a href="index.html" class="button primary">View Project</a></li>
-								</ul>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="https://github.com/adithyaravi12/adithyaravi12.github.io" class="button primary small">View Full Project</a></li>
+                                </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Project 2</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Project 3</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>Project 4</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>Project 5</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Project 6</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                </ul>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="#" class="button">Back to top</a></li>
 						</ul>
 					</section>
 
