altered index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/DSC_0981.jpg" alt="" onclick="window.open(this.src)" role = "button"/></a>
 					<h1><strong>I am Adithya Ravi</strong>, a graduate student at Clemson University. 
-					This is a showcase of my projects and abilities <br /></h1>
+					This is a showcase of my projects and abilities. <br /></h1>
 				</div>
 			</header>
 
