--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Project 1</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<a href="images/proj1.gif" class="image fit thumb"><img src="images/proj1.gif" alt="" /></a>
+								<h3>Online Aid For Detecting Brain Tumor And Tuberculosis Using Deep Learning</h3>
+								<p>With the uploaded photos of the patient's x-ray, a web application with a trained CNN model identifies the presence of a brain tumor or TB.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="https://github.com/adithyaravi12/adithyaravi12.github.io" class="button primary small">View Full Project</a></li>
                                 </ul>
