about me change 2

--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
                 <header class="major">
                     <h2>About Me</h2>
                 </header>
-                <p>I am a 23-year-old graduate student who has earned his bachelor degree in Computer Science and is a software and technology enthusiast with a mind full of dreams. I am committed towards teamwork and problem-solving through a goal-oriented approach. I'm keen to learn new skills and broaden my knowledge so that I could confidently apply them later in my career. Fun fact: I am a dog lover and spends the most of my free time on Reddit or editing short video montages.</p>  
+                <p>I am a 23-year-old graduate student who has earned his bachelor degree in Computer Science & Engineering and is a software and technology enthusiast with a mind full of dreams. I am committed towards teamwork and problem-solving through a goal-oriented approach. I'm keen to learn new skills and broaden my knowledge so that I could confidently apply them later in my career. Fun fact: I am a dog lover and spend most of my free time on Reddit or editing short video montages.</p>  
             </section>
 
             <!--Three-->
@@ -44,7 +44,7 @@
                 <ul class = "labeled-icons">
                     <li>1999 : Year of birth </li>
                     <li>2016 : Graduated High School</li>
-                    <li> 2017 - 2021 : Completed Bachelor's in Computer Science </li>
+                    <li> 2017 - 2021 : Completed Bachelor's in Computer Science & Engineering</li>
                     <li> 2021 - Present: Graduate Student at Clemson University </li>
                 </ul>
 
