--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Project 2</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<a href="images/proj2.png" class="image fit thumb"><img src="images/proj2.gif" alt="" /></a>
+								<h3>Mask detetction using transfer learning/h3>
+								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="#" class="button primary small">View Full Project</a></li>
                                 </ul>
