--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj2.png" class="image fit thumb"><img src="images/proj2.gif" alt="" /></a>
-								<h3>Mask detetction using transfer learning/h3>
+								<a href="images/proj2.gif" class="image fit thumb"><img src="images/proj2.png" alt="" /></a>
+								<h3>Mask detetction using transfer learning </h3>
 								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam</p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/mask-detetction" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
