editedd back button

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,9 +10,9 @@
 		<!-- Header -->
         <header id="header">
             <div class="inner">
-                <ul class="labeled-icons">
+                <!-- <ul class="labeled-icons">
                     <li><a href="index.html" class="button primary">Back</a></li>
-                </ul>
+                </ul> -->
                 <a href="#" class="image avatar"><img src="images/DSC_0981.jpg" alt="" onclick="window.open(this.src)" role = "button"/></a>
                 <h1><strong>I am Adithya Ravi</strong>, a graduate student at Clemson University. 
                 This is a showcase of my projects and abilities. <br /></h1>
@@ -24,6 +24,9 @@
 
             <!--One-->
             <section id = "one">
+                <a href = "index.html">
+                    <input type="button" value="Back" style="float: right;">
+                </a>
                 <blockquote>"Your best teacher is your last mistake" <sub> - Dr. A.P.J. Abdul Kalam</sub> </blockquote>
             </section>
             
