proj3 added, proj thumb change

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj1.gif" class="image fit thumb"><img src="images/proj1.gif" alt="" /></a>
+								<a href="images/proj1.gif" class="image fit thumb"><img src="images/proj1.png" alt="" /></a>
 								<h3>Online Aid For Detecting Brain Tumor And Tuberculosis Using Deep Learning</h3>
 								<p>With the uploaded photos of the patient's x-ray, a web application with a trained CNN model identifies the presence of a brain tumor or TB.</p><br/>
 								<ul class="actions small" id = "wrapper">
@@ -40,7 +40,7 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj2.gif" class="image fit thumb"><img src="images/proj2.png" alt="" /></a>
+								<a href="images/proj2.gif" class="image fit thumb"><img src="images/mask under chin.jpg" alt="" /></a>
 								<h3>Mask detetction using transfer learning </h3>
 								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam</p><br/>
 								<ul class="actions small" id = "wrapper">
@@ -48,11 +48,11 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Project 3</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<a href="images/proj3.png" class="image fit thumb"><img src="images/heart.jpg" alt="" /></a>
+								<h3>Heart Attack Prediction Using Multi-layer Perceptron Model</h3>
+								<p>With a dataset obtained from Kaggle, a model was trained for the prediction of hear attack by analysing the input features of a patient.</p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/cpsc6430-machine-learning/tree/main/project5-final" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
