proj4 added, index changed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/proj2.gif" class="image fit thumb"><img src="images/mask under chin.jpg" alt="" /></a>
 								<h3>Mask detetction using transfer learning </h3>
-								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam</p><br/>
+								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="https://github.com/adithyaravi12/mask-detetction" class="button primary small">View Full Project</a></li>
                                 </ul>
@@ -56,11 +56,11 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Project 4</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<a href="images/res-tip-calc.gif" class="image fit thumb"><img src="images/tip.jpg" alt="" /></a>
+								<h3>Restaurant Tip Calculator using JavaScript</h3>
+								<p>A basic restaurant tip calculator, that calculates the tip based on the desired percentage and displays the new bill with tip added. It is also capable of taking screenshot using the screenshot button, that saves it as a pdf file.</p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/tip-calc" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -82,24 +82,30 @@
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button">Back to top</a></li>
+							<li><a href="new.html">
+								<input type="button" class="button primary" style="float: right;" Value="Next">
+							</a></li>
 						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>I am quite active on linkedin and github, and can also be reached via</p>
+						<!-- <p>I am quite active on linkedin and github, and can also be reached via</p> -->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										102 Calhoun St. <br />
-										Clemson, SC 29631<br />
+										102 Calhoun St.,
+										Clemson, SC 29631,
 										United States
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
 										<a href="mailto: adithya.ravi1203@gmail.com">adithya.ravi1203@gmail.com</a>
+									</li>
+									<li>
+										<h3><a href="https://www.linkedin.com/in/adithya-ravi-707443126/" class="icon brands fa-linkedin"></a></h3><span class="label">LinkedIn</span></a>
 									</li>
 								</ul>
 							</div>
