--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 									<li>
 										<h3><a href="https://www.linkedin.com/in/adithya-ravi-707443126/" class="icon brands fa-linkedin"></a></h3><span class="label">LinkedIn</span></a>
 									</li>
+									<li>
+										<h3><a href="https://discord.com/channels/adithyaravi2412#8513" class="icon brands fa-discord"></a></h3><span class="label">Discord</span></a>
+									</li>
 								</ul>
 							</div>
 						</div>
