--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Back to top</a></li>
+							<li><a href="#" class="button small">Back to top</a></li>
 							<li><a href="new.html">
-								<input type="button" class="button primary" style="float: right;" Value="Next">
+								<input type="button" class="button primary small" style="float: right;" Value="Next">
 							</a></li>
 						</ul>
 					</section>
