--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Works</h2>
+						<!-- <h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/proj1.gif" class="image fit thumb"><img src="images/proj1.png" alt="" /></a>
@@ -79,12 +79,16 @@
                                     <li><a href="#" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
-						</div>
+						</div> -->
 						<ul class="actions">
+                            <li><a href="index.html">
+								<input type="button" class="button primary small" style="float: right;" Value="Back">
+							</a></li>
 							<li><a href="#" class="button small">Back to top</a></li>
-							<li><a href="index2.html">
+							<li><a href="new.html">
 								<input type="button" class="button primary small" style="float: right;" Value="Next">
 							</a></li>
+                            
 						</ul>
 					</section>
 
@@ -433,7 +437,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					</section>
 				-->
 
-			</div>
+			<!-- </div> -->
 
 		<!-- Footer -->
 			<footer id="footer">
