--- a/index.html
+++ b/index.html
@@ -64,21 +64,21 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Project 5</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<a href="images/fake_news_output.png" class="image fit thumb"><img src="images/fake_news.jpg" alt="" /></a>
+								<h3>Fake news detetction</h3>
+								<p>Using Passive Aggressive Classifier from scikit learn, a model is trained to detect the fake and real news from the given training dataset and prediction are made on the test dataset. </p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/fake-news" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Project 6</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="#" class="button primary small">View Full Project</a></li>
                                 </ul>
-							</article>
+							</article> -->
 						</div>
 						<ul class="actions">
 							<li><a href="#" class="button small">Back to top</a></li>
