--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj1.gif" class="image fit thumb"><img src="images/proj1.png" alt="" /></a>
+								<a href="images/fulls/proj1.gif" class="image fit thumb"><img src="images/thumbs/react-js-development-services.jpg" alt="" /></a>
 								<h3>Online Aid For Detecting Brain Tumor And Tuberculosis Using Deep Learning</h3>
 								<p>With the uploaded photos of the patient's x-ray, a web application with a trained CNN model identifies the presence of a brain tumor or TB.</p><br/>
 								<ul class="actions small" id = "wrapper">
@@ -40,7 +40,7 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj2.gif" class="image fit thumb"><img src="images/mask under chin.jpg" alt="" /></a>
+								<a href="images/fulls/proj2.gif" class="image fit thumb"><img src="images/thumbs/mask under chin.jpg" alt="" /></a>
 								<h3>Mask detetction using transfer learning </h3>
 								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam.</p><br/>
 								<ul class="actions small" id = "wrapper">
@@ -48,7 +48,7 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj3.png" class="image fit thumb"><img src="images/heart.jpg" alt="" /></a>
+								<a href="images/fulls/proj3.png" class="image fit thumb"><img src="images/thumbs/heart.jpg" alt="" /></a>
 								<h3>Heart Attack Prediction Using Multi-layer Perceptron Model</h3>
 								<p>With a dataset obtained from Kaggle, a model was trained for the prediction of hear attack by analysing the input features of a patient.</p><br/>
 								<ul class="actions small" id = "wrapper">
@@ -56,7 +56,7 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/res-tip-calc.gif" class="image fit thumb"><img src="images/tip.jpg" alt="" /></a>
+								<a href="images/fulls/res-tip-calc.gif" class="image fit thumb"><img src="images/thumbs/tip.jpg" alt="" /></a>
 								<h3>Restaurant Tip Calculator using JavaScript</h3>
 								<p>A basic restaurant tip calculator, that calculates the tip based on the desired percentage and displays the new bill with tip added. It is also capable of taking screenshot using the screenshot button, that saves it as a pdf file.</p><br/>
 								<ul class="actions small" id = "wrapper">
@@ -64,7 +64,7 @@
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fake_news_output.png" class="image fit thumb"><img src="images/fake_news.jpg" alt="" /></a>
+								<a href="images/fulls/fake_news_output.png" class="image fit thumb"><img src="images/thumbs/fake_news.jpg" alt="" /></a>
 								<h3>Fake news detetction</h3>
 								<p>Using Passive Aggressive Classifier from scikit learn, a model is trained to detect the fake and real news from the given training dataset and prediction are made on the test dataset. </p><br/>
 								<ul class="actions small" id = "wrapper">
