--- a/index.html
+++ b/index.html
@@ -65,14 +65,30 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/fake_news_output.png" class="image fit thumb"><img src="images/thumbs/fake_news.jpg" alt="" /></a>
-								<h3>Fake news detetction</h3>
+								<h3>Fake news detetction using Passive Aggressive Classifier</h3>
 								<p>Using Passive Aggressive Classifier from scikit learn, a model is trained to detect the fake and real news from the given training dataset and prediction are made on the test dataset. </p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="https://github.com/adithyaravi12/fake-news" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/calc.png" class="image fit thumb"><img src="images/thumbs/calc.jpg" alt="" /></a>
+								<h3>Calculate Order History</h3>
+								<p>I used numpy in python to analyze amazon data to see how much money I spent on the e-commerce website. (All figures are in rupees.)</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="https://github.com/adithyaravi12/online_courseworks/tree/main/amazon-bill" class="button primary small">View Full Project</a></li>
+                                </ul>
+							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="images/fulls/calc.png" class="image fit thumb"><img src="images/thumbs/calc.jpg" alt="" /></a>
+								<h3>Project 6</h3>
+								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="#" class="button primary small">View Full Project</a></li>
+                                </ul>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/calc.png" class="image fit thumb"><img src="images/thumbs/calc.jpg" alt="" /></a>
 								<h3>Project 6</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
 								<ul class="actions small" id = "wrapper">
