--- a/index.html
+++ b/index.html
@@ -22,9 +22,14 @@
 
 				<!-- One -->
 				<section id = "one">
+					<!-- <a href = "index.html">
+						<input type="button" class="button primary" value="Other Works" style="float: right; margin-left: 5px"></a>
+					<a href = "index.html">
+						<input type="button" class="button primary" value="Recent Works" style="float: right;"></a> -->
 					<ul class="actions">
 						<li><a href="aboutme.html" class="button">About me</a></li>
 					</ul>
+					
 				</section>
 
 				<!-- Two -->
