--- a/index2.html
+++ b/index2.html
@@ -29,17 +29,17 @@
 
 				<!-- Two -->
 					<section id="two">
-						<!-- <h2>Recent Works</h2>
+						 <h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj1.gif" class="image fit thumb"><img src="images/proj1.png" alt="" /></a>
+								<a href="images/fulls/proj6.gif" class="image fit thumb"><img src="images/thumbs/qr-code.jpg" alt="" /></a>
 								<h3>Online Aid For Detecting Brain Tumor And Tuberculosis Using Deep Learning</h3>
 								<p>With the uploaded photos of the patient's x-ray, a web application with a trained CNN model identifies the presence of a brain tumor or TB.</p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="https://github.com/adithyaravi12/adithyaravi12.github.io" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/code-scanner" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
+							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/proj2.gif" class="image fit thumb"><img src="images/mask under chin.jpg" alt="" /></a>
 								<h3>Mask detetction using transfer learning </h3>
 								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam.</p><br/>
