--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/proj1.gif" class="image fit thumb"><img src="images/thumbs/react-js-development-services.jpg" alt="" /></a>
+								<a href="images/fulls/tbbt.gif" class="image fit thumb"><img src="images/thumbs/react-js-development-services.jpg" alt="" /></a>
 								<h3>Online Aid For Detecting Brain Tumor And Tuberculosis Using Deep Learning</h3>
 								<p>With the uploaded photos of the patient's x-ray, a web application with a trained CNN model identifies the presence of a brain tumor or TB.</p><br/>
 								<ul class="actions small" id = "wrapper">
