--- a/index2.html
+++ b/index2.html
@@ -85,9 +85,9 @@
 								<input type="button" class="button primary small" style="float: right;" Value="Back">
 							</a></li>
 							<li><a href="#" class="button small">Back to top</a></li>
-							<li><a href="new.html">
+							<!-- <li><a href="#">
 								<input type="button" class="button primary small" style="float: right;" Value="Next">
-							</a></li>
+							</a></li> -->
                             
 						</ul>
 					</section>
