--- a/index2.html
+++ b/index2.html
@@ -22,73 +22,85 @@
 
 				<!-- One -->
 				<section id = "one">
+					<!-- <a href = "index.html">
+						<input type="button" class="button primary" value="Other Works" style="float: right; margin-left: 5px"></a>
+					<a href = "index.html">
+						<input type="button" class="button primary" value="Recent Works" style="float: right;"></a> -->
 					<ul class="actions">
 						<li><a href="aboutme.html" class="button">About me</a></li>
 					</ul>
+					
 				</section>
 
 				<!-- Two -->
 					<section id="two">
-						 <h2>Recent Works</h2>
+						<h2>Recent Works</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/proj6.gif" class="image fit thumb"><img src="images/thumbs/qr-code.jpg" alt="" /></a>
-								<h3>QR Code detection/h3>
-								<p>Using opencv and pyzbar packages, python program is written so as to recognize the type of code that is being displayed on the screen and decode the data to a user-readable format and open links.</p><br/>
+								<h3>Code Scanner </h3>
+								<p>Using opencv and pyzbar packages, python program is written so as to recognize the type of code that is being displayed on the screen and decode the data to a user-readable format and open links. </p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="https://github.com/adithyaravi12/code-scanner" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj2.gif" class="image fit thumb"><img src="images/mask under chin.jpg" alt="" /></a>
-								<h3>Mask detetction using transfer learning </h3>
-								<p>Dataset containig images of masked and unmasked people or all races/religion is used to train the model and is able to recognise and detect if a person is wearing a mask in real time using webcam.</p><br/>
-								<ul class="actions small" id = "wrapper">
-                                    <li><a href="https://github.com/adithyaravi12/mask-detetction" class="button primary small">View Full Project</a></li>
-                                </ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/proj3.png" class="image fit thumb"><img src="images/heart.jpg" alt="" /></a>
+								<a href="images/fulls/proj3.png" class="image fit thumb"><img src="images/thumbs/heart.jpg" alt="" /></a>
 								<h3>Heart Attack Prediction Using Multi-layer Perceptron Model</h3>
 								<p>With a dataset obtained from Kaggle, a model was trained for the prediction of hear attack by analysing the input features of a patient.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="https://github.com/adithyaravi12/cpsc6430-machine-learning/tree/main/project5-final" class="button primary small">View Full Project</a></li>
                                 </ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/res-tip-calc.gif" class="image fit thumb"><img src="images/tip.jpg" alt="" /></a>
+							</article> -->
+							<!-- <article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/res-tip-calc.gif" class="image fit thumb"><img src="images/thumbs/tip.jpg" alt="" /></a>
 								<h3>Restaurant Tip Calculator using JavaScript</h3>
 								<p>A basic restaurant tip calculator, that calculates the tip based on the desired percentage and displays the new bill with tip added. It is also capable of taking screenshot using the screenshot button, that saves it as a pdf file.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="https://github.com/adithyaravi12/tip-calc" class="button primary small">View Full Project</a></li>
                                 </ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Project 5</h3>
+							</article> -->
+							<!-- <article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/fake_news_output.png" class="image fit thumb"><img src="images/thumbs/fake_news.jpg" alt="" /></a>
+								<h3>Fake news detetction using Passive Aggressive Classifier</h3>
+								<p>Using Passive Aggressive Classifier from scikit learn, a model is trained to detect the fake and real news from the given training dataset and prediction are made on the test dataset. </p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="https://github.com/adithyaravi12/fake-news" class="button primary small">View Full Project</a></li>
+                                </ul>
+							</article> -->
+							<!-- <article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/calc.png" class="image fit thumb"><img src="images/thumbs/calc.jpg" alt="" /></a>
+								<h3>Calculate Order History</h3>
+								<p>I used numpy in python to analyze amazon data to see how much money I spent on the e-commerce website. (All figures are in rupees.)</p><br/>
+								<ul class="actions small" id = "wrapper">
+                                    <li><a href="https://github.com/adithyaravi12/online_courseworks/tree/main/amazon-bill" class="button primary small">View Full Project</a></li>
+                                </ul>
+							</article> -->
+							<!-- <article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/calc.png" class="image fit thumb"><img src="images/thumbs/calc.jpg" alt="" /></a>
+								<h3>Project 6</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="#" class="button primary small">View Full Project</a></li>
-                                </ul>
+                                </ul> -->
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+							<!-- <article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/calc.png" class="image fit thumb"><img src="images/thumbs/calc.jpg" alt="" /></a>
 								<h3>Project 6</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="#" class="button primary small">View Full Project</a></li>
                                 </ul>
-							</article>
-						</div> -->
+							</article> -->
+						</div>
 						<ul class="actions">
-                            <li><a href="index.html">
+							<li><a href="index.html">
 								<input type="button" class="button primary small" style="float: right;" Value="Back">
 							</a></li>
 							<li><a href="#" class="button small">Back to top</a></li>
-							<!-- <li><a href="#">
+							<!-- <li><a href="index2.html">
 								<input type="button" class="button primary small" style="float: right;" Value="Next">
 							</a></li> -->
-                            
 						</ul>
 					</section>
 
@@ -118,7 +130,10 @@
 							</div>
 						</div>
 					</section>
+
+
 			</div>
+
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
