--- a/aboutme.html
+++ b/aboutme.html
@@ -61,7 +61,7 @@
             </section>
             <section id = "four">
                 <ul class="labeled-icons">
-                    <li><a href="AdithyaRaviResume.pdf" class="button" target = "_blank">View Resume</a></li>
+                    <li><a href="AdithyaRavi_Resume.pdf" class="button" target = "_blank">View Resume</a></li>
                 </ul>
             </section>
 
