--- a/index2.html
+++ b/index2.html
@@ -82,8 +82,8 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p><br/>
 								<ul class="actions small" id = "wrapper">
                                     <li><a href="#" class="button primary small">View Full Project</a></li>
-                                </ul> -->
-							</article>
+                                </ul>
+							</article> -->
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/calc.png" class="image fit thumb"><img src="images/thumbs/calc.jpg" alt="" /></a>
 								<h3>Project 6</h3>
