--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 								<h3>Online Aid For Detecting Brain Tumor And Tuberculosis Using Deep Learning</h3>
 								<p>With the uploaded photos of the patient's x-ray, a web application with a trained CNN model identifies the presence of a brain tumor or TB.</p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="https://github.com/adithyaravi12/adithyaravi12.github.io" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/online-aid-bt_tb" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
