new file:   images/fulls/game.png 	new file:   images/thumbs/maze.jpeg 	modified:   index2.html

--- a/index2.html
+++ b/index2.html
@@ -44,14 +44,14 @@
                                     <li><a href="https://github.com/adithyaravi12/code-scanner" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/proj3.png" class="image fit thumb"><img src="images/thumbs/heart.jpg" alt="" /></a>
-								<h3>Heart Attack Prediction Using Multi-layer Perceptron Model</h3>
-								<p>With a dataset obtained from Kaggle, a model was trained for the prediction of hear attack by analysing the input features of a patient.</p><br/>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/game.png" class="image fit thumb"><img src="images/thumbs/maze.jpeg" alt="" /></a>
+								<h3>Trail of Terror</h3>
+								<p>Using Python, developed an interactive game with a basic GUI that employs two design patterns: Singleton Creational design pattern and Factory Creational design pattern.</p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="https://github.com/adithyaravi12/cpsc6430-machine-learning/tree/main/project5-final" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/trail_of_terror" class="button primary small">View Full Project</a></li>
                                 </ul>
-							</article> -->
+							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/res-tip-calc.gif" class="image fit thumb"><img src="images/thumbs/tip.jpg" alt="" /></a>
 								<h3>Restaurant Tip Calculator using JavaScript</h3>
