Added new project

--- a/index2.html
+++ b/index2.html
@@ -52,14 +52,14 @@
                                     <li><a href="https://github.com/adithyaravi12/trail_of_terror" class="button primary small">View Full Project</a></li>
                                 </ul>
 							</article>
-							<!-- <article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/res-tip-calc.gif" class="image fit thumb"><img src="images/thumbs/tip.jpg" alt="" /></a>
-								<h3>Restaurant Tip Calculator using JavaScript</h3>
-								<p>A basic restaurant tip calculator, that calculates the tip based on the desired percentage and displays the new bill with tip added. It is also capable of taking screenshot using the screenshot button, that saves it as a pdf file.</p><br/>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/fulls/reviews.png" class="image fit thumb"><img src="images/thumbs/review.jpg" alt="" /></a>
+								<h3>Rating predictions from reviews given to products in online markets</h3>
+								<p>Created four models to categorise reviews on popular e-commerce websites according to whether they are seller-related, marketplace-related, shipment-related, or product-related and then predict their rating. CNN, RNN/LSTM, BERT, and SVM with and without splitting were the models. With a 40.99% overall accuracy and accuracy rates of 34.12% for product-related reviews, 41.77% for delivery-related reviews, 44.70% for seller-related reviews, and 43.36% for marketplace-related reviews, the SVM model without splitting had the highest accuracy.</p><br/>
 								<ul class="actions small" id = "wrapper">
-                                    <li><a href="https://github.com/adithyaravi12/tip-calc" class="button primary small">View Full Project</a></li>
+                                    <li><a href="https://github.com/adithyaravi12/cpsc6300-applied-data-science/tree/main/final_project" class="button primary small">View Full Project</a></li>
                                 </ul>
-							</article> -->
+							</article>
 							<!-- <article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/fake_news_output.png" class="image fit thumb"><img src="images/thumbs/fake_news.jpg" alt="" /></a>
 								<h3>Fake news detetction using Passive Aggressive Classifier</h3>
